# ibge-2022

./: files_to_download.json  pyproject.toml
src/: Education.ipynb  download_data.py  ibge_dataframes.py
