[tool.poetry]
name = "ibge-2022"
version = "0.1.0"
description = ""
authors = ["Rogerio Tavares Gasi <rtgasi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.67.1"
pandas = "^2.2.3"
chardet = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
